baseline updates for pom and properties file

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,24 @@
  	 <hikari.cp-version>2.3.12</hikari.cp-version>
  	 <jooq-version>3.8.4</jooq-version>
  	 <jooq-modelmapper-version>0.7.2</jooq-modelmapper-version>
+ 	 		<!-- BUILD PROPERTIES DEFINITION -->
+	 <build.profile.id>dev</build.profile.id>
+	 <skip.db.creation>true</skip.db.creation>
+	 <jooq.generator.db.dialect>org.jooq.util.postgres.PostgresDatabase</jooq.generator.db.dialect>
+	 <!-- 		available dialects -->
+<!--            org.jooq.util.ase.ASEDatabase (to be used with Sybase ASE) -->
+<!--            org.jooq.util.cubrid.CUBRIDDatabase -->
+<!--            org.jooq.util.db2.DB2Database -->
+<!--            org.jooq.util.derby.DerbyDatabase -->
+<!--            org.jooq.util.h2.H2Database -->
+<!--            org.jooq.util.hsqldb.HSQLDBDatabase -->
+<!--            org.jooq.util.ingres.IngresDatabase -->
+<!--            org.jooq.util.mysql.MySQLDatabase -->
+<!--            org.jooq.util.oracle.OracleDatabase -->
+<!--            org.jooq.util.postgres.PostgresDatabase -->
+<!--            org.jooq.util.sqlite.SQLiteDatabase -->
+<!--            org.jooq.util.sqlserver.SQLServerDatabase -->
+<!--            org.jooq.util.sybase.SybaseDatabase (to be used with Sybase SQL Anywhere) -->
   </properties>
   	
   <dependencyManagement>
@@ -111,9 +129,203 @@
 		</dependency>
   </dependencies>
   
+  <!-- Profile configuration -->
+<profiles>
+    <!-- The configuration of the development profile -->
+    <profile>
+        <id>dev</id>
+        <!-- The development profile is active by default -->
+        <activation>
+            <activeByDefault>true</activeByDefault>
+        </activation>
+        <properties>
+            <!--
+                Specifies the build.profile.id property that must be equal than the name of
+                the directory that contains the profile specific configuration file.
+                Because the name of the directory that contains the configuration file of the
+                development profile is dev, we must set the value of the build.profile.id 
+                property to dev.
+            -->
+            <build.profile.id>dev</build.profile.id>
+        </properties>
+    </profile>
+    <!-- The configuration of the production profile -->
+    <profile>
+        <id>prod</id>
+        <properties>
+            <!--
+                Specifies the build.profile.id property that must be equal than the name of
+                the directory that contains the profile specific configuration file.
+                Because the name of the directory that contains the configuration file of the
+                production profile is prod, we must set the value of the build.profile.id 
+                property to prod.
+            -->
+            <build.profile.id>prod</build.profile.id>
+        </properties>
+    </profile>
+    <!-- The configuration of the testing profile -->
+    <profile>
+        <id>test</id>
+        <properties>
+            <!--
+                Specifies the build.profile.id property that must be equal than the name of
+                the directory that contains the profile specific configuration file.
+                Because the name of the directory that contains the configuration file of the
+                testing profile is test, we must set the value of the build.profile.id 
+                property to test.
+            -->
+            <build.profile.id>test</build.profile.id>
+        </properties>
+    </profile>
+</profiles>
+ 
+ 
+ 
+<!--  for building -->
+  
   <build>
+	<filters>
+	    <!--
+	        Ensures that the config.properties file is always loaded from the
+	        configuration directory of the active Maven profile. 
+	    -->
+	    <filter>profiles/${build.profile.id}/config.properties</filter>
+	</filters>
+	
+	
+	
+	<resources>
+	    <!--
+	        Placeholders that are found from the files located in the configured resource
+	        directories are replaced with the property values found from the profile
+	        specific configuration file.
+	    -->
+	    <resource>
+	        <filtering>true</filtering>
+	        <directory>src/main/resources</directory>
+	    </resource>
+	</resources>
+  
     <testSourceDirectory>src/main/test</testSourceDirectory>
 		<plugins>
+		
+<!-- 	1.	Reading the Properties From the Profile Specific Properties File -->
+			<plugin>
+				  <groupId>org.codehaus.mojo</groupId>
+				  <artifactId>properties-maven-plugin</artifactId>
+				  <version>1.0-alpha-2</version>
+				  <executions>
+				        <execution>
+				            <phase>initialize</phase>
+				            <goals>
+				                <goal>read-project-properties</goal>
+				            </goals>
+				            <configuration>
+				                <files>
+				                    <file>profiles/${build.profile.id}/config.properties</file>
+				                </files>
+				            </configuration>
+				        </execution>
+				    </executions>
+			</plugin>
+			
+<!-- 	2.	sql maven plug in -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sql-maven-plugin</artifactId>
+				<version>1.5</version>
+
+				<configuration>
+					<skip>${skip.db.creation}</skip>
+				</configuration>
+
+				<executions>
+					<execution>
+						<id>create-database-postgres</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<driver>${db.driver}</driver>
+							<url>${db.url}</url>
+							<username>${db.username}</username>
+							<password>${db.password}</password>
+
+							<autocommit>true</autocommit>
+						</configuration>
+					</execution>
+				</executions>
+
+				<dependencies>
+					<dependency>
+				      <groupId>org.postgresql</groupId>
+				      <artifactId>postgresql</artifactId>
+				      <version>9.4-1206-jdbc41</version>
+				    </dependency>
+				</dependencies>
+			</plugin>
+
+	<!-- 3. code generation -->
+<plugin>
+	<groupId>org.jooq</groupId>
+	<artifactId>jooq-codegen-maven</artifactId>
+	<version>${jooq-version}</version>
+  
+    <executions>
+        <!-- Generate the required class from the database -->
+        <execution>
+            <id>generate-postgres</id>
+            <phase>generate-sources</phase>
+            <goals>
+                <goal>generate</goal>
+            </goals>
+        </execution>
+    </executions>
+  
+    <dependencies>
+        <!--
+            Because we use the H2 database, we have to add it as the dependency
+            of this plugin.
+        -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4-1206-jdbc41</version>
+		</dependency>
+    </dependencies>
+  
+    <configuration>
+        <!-- Configure the database connection -->
+        <jdbc>
+            <driver>${db.driver}</driver>
+            <url>${db.url}</url>
+            <user>${db.username}</user>
+            <password>${db.password}</password>
+        </jdbc>
+  
+        <generator>
+            <database>
+                <!-- Configure the used database dialect -->
+                <name>${jooq.generator.db.dialect}</name>
+                <!-- Include all tables found from the PUBLIC schema -->
+                <includes>tbl_image|tbl_imagedetails|tbl_imageinfo</includes>
+                <excludes></excludes>
+            </database>
+            <!-- Generate classes for tables and records -->
+            <generate>
+                <records>true</records>
+                <pojos>true</pojos>
+            </generate>
+            <!-- Configure the target package and directory -->
+            <target>
+                <packageName>com.poc.db</packageName>
+                <directory>target/generated-sources/jooq</directory>
+            </target>
+        </generator>
+    </configuration>
+</plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -138,6 +350,7 @@
                    <target>${java-version}</target>
                </configuration>
          </plugin>
+         
 		</plugins>
   </build>
 </project>
