--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -1,9 +1,8 @@
 #Database Configuration
-db.driver=${db.driver}
 db.url=${db.url}
 db.username=${db.username}
 db.password=${db.password}
-db.dataSourceClassName=org.postgresql.Driver
+db.dataSourceClassName=${db.driver}
 #Additional Configuration for Hikari Datasource
 db.maximumPoolSize=5
 db.minimumIdle=3
