--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -2,6 +2,7 @@
 db.url=${db.url}
 db.username=${db.username}
 db.password=${db.password}
+db.driver=${db.driver}
 db.dataSourceClassName=${db.driver}
 #Additional Configuration for Hikari Datasource
 db.maximumPoolSize=5
