--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
  	 <jooq-version>3.8.4</jooq-version>
  	 <jooq-modelmapper-version>0.7.2</jooq-modelmapper-version>
  	 		<!-- BUILD PROPERTIES DEFINITION -->
-	 <build.profile.id>dev</build.profile.id>
+	 <build.profile.id>aws</build.profile.id>
 	 <skip.db.creation>true</skip.db.creation>
 	 <bone.cp-version>0.8.0.RELEASE</bone.cp-version>
 	 <jooq.generator.db.dialect>org.jooq.util.postgres.PostgresDatabase</jooq.generator.db.dialect>
@@ -147,9 +147,6 @@
     <profile>
         <id>dev</id>
         <!-- The development profile is active by default -->
-        <activation>
-            <activeByDefault>true</activeByDefault>
-        </activation>
         <properties>
             <!--
                 Specifies the build.profile.id property that must be equal than the name of
@@ -187,6 +184,12 @@
                 property to test.
             -->
             <build.profile.id>test</build.profile.id>
+        </properties>
+    </profile>
+    <profile>
+        <id>aws</id>
+        <properties>
+            <build.profile.id>aws</build.profile.id>
         </properties>
     </profile>
 </profiles>
@@ -373,5 +376,78 @@
 		</plugin>
          
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											properties-maven-plugin
+										</artifactId>
+										<versionRange>
+											[1.0-alpha-2,)
+										</versionRange>
+										<goals>
+											<goal>
+												read-project-properties
+											</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											sql-maven-plugin
+										</artifactId>
+										<versionRange>
+											[1.5,)
+										</versionRange>
+										<goals>
+											<goal>execute</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.jooq</groupId>
+										<artifactId>
+											jooq-codegen-maven
+										</artifactId>
+										<versionRange>
+											[3.8.4,)
+										</versionRange>
+										<goals>
+											<goal>generate</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
   </build>
 </project>
